--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    
   }
   section p {
     font-size: 14px;
@@ -98,17 +98,18 @@ body {
   footer {
     font-size: 14px;
     line-height: 28px;
-  
     text-align: center;
-  
-    margin-top: 80px;
+
+    margin-top: 50vh;
   }
   
   footer a {
+    
     font-weight: bold;
   }
   
   #balls {
+    position: fixed;
       bottom: 0;
       right: 0;
   }
