--- a/desafioSemantica/style.css
+++ b/desafioSemantica/style.css
@@ -14,15 +14,14 @@ body {
   padding-top: 65px;
 }
 
-.nav {
+nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   margin-bottom: 55px;
 }
-
-.list {
+ul {
   display: flex;
   gap: 48px;
   list-style: none;
@@ -35,11 +34,11 @@ a {
   text-decoration: none;
 }
 
-.list .item a {
+ul li a {
     opacity: 0.5;
 }
 
-.list .item a:hover {
+ul li a:hover {
   font-weight: bold;
   opacity: 1;
 }
@@ -49,11 +48,12 @@ a {
   font-family: "Mulish", sans-serif;
 }
 
-.main {
+main{
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 
 .title {
   font-size: 49px;
@@ -78,35 +78,33 @@ a {
   margin: 40px 0;
 }
 
-.button {
-  color: white;
+button {
+  color: rgb(255, 255, 255);
   text-transform: uppercase;
   font-family: "Open Sans", sans-serif;
 
   background: #69B99D;
   border: 0;
-  padding: 14px 32px 15px;
-
+  padding: 15px 32px;
+  font-size: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
-
   border-radius: 4px;
-
   cursor: pointer;
 }
 
-.footer {
+footer {
+
   font-size: 14px;
   line-height: 28px;
-
   text-align: center;
-
   margin-top: 80px;
+  
 }
 
-.footer a {
+footer a {
   font-weight: bold;
 }
 
